--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
                         <nav class="tmp-mainmenu-nav d-none d-xl-block">
                             <ul class="tmp-mainmenu">
                                 <li>
-                                    <a href="index-02.html">Home
+                                    <a href="index.html">Home
                                     </a>
                                     <!-- <ul class="submenu">
             <li><a href="index.html">Home 01</a></li>
@@ -350,7 +350,7 @@
                             <h5 class="ft-title">Quick Link</h5>
                             <ul class="ft-link tmp-link-animation">\
                                 <li>
-                                    <a href="index-02.html">Home</a>
+                                    <a href="index.html">Home</a>
                                 </li>
                                 <li>
                                     <a href="about.html">About Me</a>
@@ -548,7 +548,7 @@
                                     <div class="single-demo">
                                         <div class="inner">
                                             <div class="thumbnail">
-                                                <a href="index-02.html">
+                                                <a href="index.html">
                                                     <img class="w-100" src="assets/images/demo/home-2.png" alt="Personal Portfolio">
                                                     <span class="overlay-content">
                                                     <span class="overlay-text">View Demo <i
@@ -557,7 +557,7 @@
                                                 </a>
                                             </div>
                                             <div class="inner">
-                                                <h3 class="title"><a href="index-02.html">Demo 02</a></h3>
+                                                <h3 class="title"><a href="index.html">Demo 02</a></h3>
                                             </div>
                                         </div>
                                     </div>
