--- a/project-details2.html
+++ b/project-details2.html
@@ -69,8 +69,8 @@
                             <div class="social-share-wrapper d-none d-md-block">
                                 <div class="social-link">
                                    
-                                    <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
-                                    <a href="#"><i class="fa-brands fa-github"></i></a>
+                                    <a href="https://www.linkedin.com/in/shubhamshrotriya/"><i class="fa-brands fa-linkedin-in"></i></a>
+                                    <a href="https://github.com/shubhamshrotriya16427"><i class="fa-brands fa-github"></i></a>
                                 </div>
                             </div>
                             <div class="actions-area">
@@ -110,7 +110,7 @@
                 </div>
                 <ul class="tmp-mainmenu">
                     <li>
-                        <a href="#">Home
+                        <a href="index.html">Home
                         </a>
                         <!-- <ul class="submenu">
             <li><a href="index.html">Home 01</a></li>
@@ -189,7 +189,7 @@
                     <div class="breadcrumb-inner text-center">
                         <h1 class="title split-collab">Project Details</h1>
                         <ul class="page-list">
-                            <li class="tmp-breadcrumb-item"><a href="index-02.html">Home</a></li>
+                            <li class="tmp-breadcrumb-item"><a href="index.html">Home</a></li>
                             <li class="icon"><i class="fa-solid fa-angle-right"></i></li>
                             <li class="tmp-breadcrumb-item active">Project Details</li>
                         </ul>
@@ -212,8 +212,8 @@
                 <div class="col-lg-8">
                     <div class="project-details-content-wrap">
                         <h2 class="title">ContentSparkAI </h2>
-                        <p class="docs">Spotify clone is a dynamic music streaming web app built using HTML, CSS, and JavaScript. It fetches data from a GitHub repository to display playlists, albums, and song details. The project includes essential features like audio playback controls, playlist management, and a responsive UI. Users can interact with the interface seamlessly, mimicking Spotify’s core functionalities. The design ensures a smooth and engaging music experience across different devices.</p>
-                        <p class="docs">It also includes a visually appealing layout with intuitive navigation for an enhanced user experience. The project showcases your frontend skills in handling dynamic data, UI responsiveness, and interactive elements.</p>
+                        <p class="docs">ContentSparkAI is an AI-powered content generation tool designed to simplify content creation. It helps users generate high-quality blog posts, marketing copy, and social media content efficiently. The platform leverages advanced AI models to ensure engaging and SEO-friendly text. With a user-friendly interface, it streamlines the writing process for businesses and individuals. ContentSparkAI enhances productivity by providing instant, well-structured content ideas.</p>
+                        <p class="docs">It also includes customization options, allowing users to tailor content to their specific needs. Whether for bloggers, marketers, or businesses, ContentSparkAI makes content creation faster and more effective.</p>
 
                         <div class="check-box-wrap">
                             <ul>
@@ -260,8 +260,9 @@
             </div>
         </div>
     </div>
+
+
     <!-- Start Footer Area  -->
-  
     <footer class="footer-area footer-style-one-wrapper  tmp-section-gap">
         <div class="container">
             <div class="footer-main footer-style-one">
@@ -270,9 +271,9 @@
                     <div class="col-lg-4 col-md-6">
                         <div class="single-footer-wrapper quick-link-wrap">
                             <h5 class="ft-title">Quick Link</h5>
-                            <ul class="ft-link tmp-link-animation">\
+                            <ul class="ft-link tmp-link-animation">
                                 <li>
-                                    <a href="index-02.html">Home</a>
+                                    <a href="index.html">Home</a>
                                 </li>
                                 <li>
                                     <a href="about.html">About Me</a>
@@ -290,15 +291,14 @@
                         <div class="single-footer-wrapper contact-wrap">
                             <h5 class="ft-title">Contact </h5>
                             <ul class="ft-link tmp-link-animation">
-                                <li><span class="ft-icon"><i class="fa-solid fa-envelope"></i></span><a href="#">nafiz125@gmail.com</a></li>
-                                <li><span class="ft-icon"><i class="fa-solid fa-location-dot"></i></span>3891
-                                    Ranchview Dr. Richardson</li>
-                                <li><span class="ft-icon"><i class="fa-solid fa-phone"></i></span><a href="#">01245789321</a></li>
+                                <li><span class="ft-icon"><i class="fa-solid fa-envelope"></i></span><a href="#">shubhamshrotriya31@gmail.com</a></li>
+                                <li><span class="ft-icon"><i class="fa-solid fa-location-dot"></i></span>Los Angeles, CA</li>
+                                <li><span class="ft-icon"><i class="fa-solid fa-phone"></i></span><a href="#">+1 (951) 465-9910 </a></li>
                             </ul>
                             <div class="social-link footer">
                                
-                                <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
-                                <a href="#"><i class="fa-brands fa-github"></i></a>
+                                <a href="https://www.linkedin.com/in/shubhamshrotriya/"><i class="fa-brands fa-linkedin-in"></i></a>
+                                <a href="https://github.com/shubhamshrotriya16427"><i class="fa-brands fa-github"></i></a>
                             </div>
                         </div>
                     </div>
@@ -314,7 +314,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="main-wrapper">
-                        <p class="copy-right-para">© Aslicecode <script>
+                        <p class="copy-right-para">© Los Angeles, CA <script>
                                 document.write(new Date().getFullYear())
                             </script> | All Rights Reserved</p>
                         <ul>
@@ -328,8 +328,6 @@
         </div>
     </div>
     <!-- End Footer Area  -->
-
-
 
     <!-- ready chatting option via email -->
 
