--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                             <i class="fa-solid fa-phone"></i>
                             <div class="information tmp-link-animation">
                                 <span>Call Now</span>
-                                <a href="#" class="number">+92 (8800) - 98670</a>
+                                <a href="#" class="number">+1 (951) 465-9910 </a>
                             </div>
                         </div>
                         <!-- single contact information end -->
@@ -170,7 +170,7 @@
                             <i class="fa-solid fa-envelope"></i>
                             <div class="information tmp-link-animation">
                                 <span>Mail Us</span>
-                                <a href="#" class="number">example@info.com</a>
+                                <a href="#" class="number">shubhamshrotriya31@gmail.com</a>
                             </div>
                         </div>
                         <!-- single contact information end -->
@@ -180,7 +180,9 @@
                             <i class="fa-solid fa-location-crosshairs"></i>
                             <div class="information tmp-link-animation">
                                 <span>My Address</span>
-                                <span class="number">66 Broklyant, New York 3269</span>
+                                <span class="number">Los Angeles, CA
+
+                                </span>
                             </div>
                         </div>
                         <!-- single contact information end -->
@@ -190,8 +192,8 @@
                         <span class="subtitle">find with me</span>
                         <div class="social-link">
 
-                            <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
-                            <a href="#"><i class="fa-brands fa-github"></i></a>
+                            <a href="https://www.linkedin.com/in/shubhamshrotriya/"><i class="fa-brands fa-linkedin-in"></i></a>
+                            <a href="https://github.com/shubhamshrotriya16427"><i class="fa-brands fa-github"></i></a>
                         </div>
                     </div>
                     <!-- social area end -->
