--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
                         <div class="tmp-header-right">
                             <div class="social-share-wrapper d-none d-md-block">
                                 <div class="social-link">
-                                    <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
-                                    <a href="#"><i class="fa-brands fa-github"></i></i></a>
+                                    <a href="https://www.linkedin.com/in/shubhamshrotriya/"><i class="fa-brands fa-linkedin-in"></i></a>
+                                    <a href="https://github.com/shubhamshrotriya16427"><i class="fa-brands fa-github"></i></i></a>
                                 </div>
                             </div>
                             <div class="actions-area">
