--- a/about.html
+++ b/about.html
@@ -170,7 +170,7 @@
 
     <div class="skillandprofiencies">
         <h1>TECHNICAL SKILLS</h1>
-        <ul>
+        <ul class="data-list">
 
             <li> <span class="text-deco">Programming Languages & Frameworks:</span> C++, Java, Python, JavaScript,
                 React, Node.Js, Spring Boot,
@@ -642,7 +642,7 @@
                             document.write(new Date().getFullYear())
                         </script> | All Rights Reserved</p>
                     <ul>
-                        <li><a href="#">Trams & Condition</a></li>
+                        <li><a href="#">Terms & Condition</a></li>
                         <li><a href="#">Privacy Policy</a></li>
                         <li><a href="#">Contact Us</a></li>
                     </ul>
