--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                     </div>
                     <h5 class="title mt--30">Software Developer with around 5 years of experience in designing,
                         developing, and optimizing scalable applications.</h5>
-                    <p class="disc">I am Shubham Shrotriya, a Software Engineer & Full-Stack Developer with a passion
+                    <p class="disc">I am Shubham Shrotriya, a Software Developer & Full-Stack Developer with a passion
                         for
                         building scalable, high-performance applications. With a Master’s in Computer Science from
                         UC Riverside, I specialize in backend development, cloud computing, and AI-driven
@@ -280,8 +280,8 @@
                                     </span>
                                 </span>
                             </h1>
-                            <p class="disc tmp-scroll-trigger tmp-title-split tmp-fade-in animation-order-3"> I am a
-                                <span>Software Engineer</span>with a passion <br>for
+                            <p class="disc tmp-scroll-trigger tmp-title-split tmp-fade-in animation-order-3">
+                                <span>Software Developer </span>with a passion <br>for
                                 building scalable, high-performance applications.
                                 <!-- <span>web
                                     developer </span> -->
@@ -472,7 +472,7 @@
                             <h3 class="resume-title">Software Developer </h3>
                             <div class="institute">Accenture (USA)</div>
                             <p>
-                            <ul>
+                            <ul class="data-list">
                                 <li>Designed and developed scalable enterprise applications using Java,
                                     Spring Boot, and Angular, enabling seamless integration of financial
                                     data processing and enhancing system performance for high-
@@ -504,7 +504,7 @@
                                 – Aug 2023</div>
                             <h3 class="resume-title">Software Developer</h3>
                             <div class="institute">JPMorgan (INDIA)</div>
-                            <ul>
+                            <ul class="data-list">
                                 <li>Developed and optimized a scalable microservices architecture using
                                     Java, Spring Boot, and RESTful APIs, enhancing application
                                     responsiveness and improving system throughput by 35% to handle
@@ -709,7 +709,7 @@
                             document.write(new Date().getFullYear())
                         </script> | All Rights Reserved</p>
                     <ul>
-                        <li><a href="#">Trams & Condition</a></li>
+                        <li><a href="#">Terms & Condition</a></li>
                         <li><a href="#">Privacy Policy</a></li>
                         <li><a href="#">Contact Us</a></li>
                     </ul>
