--- a/project.html
+++ b/project.html
@@ -434,7 +434,7 @@
                                 document.write(new Date().getFullYear())
                             </script> | All Rights Reserved</p>
                         <ul>
-                            <li><a href="#">Trams & Condition</a></li>
+                            <li><a href="#">Terms & Condition</a></li>
                             <li><a href="#">Privacy Policy</a></li>
                             <li><a href="#">Contact Us</a></li>
                         </ul>
