--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.svg">
-    <title>About Aslicecode - Personal Portfolio HTML Template | Freelancer & Developer Portfolio</title>
+    <title>Shubham Shrotriya | Software Developer - Portfolio</title>
     <!-- Bootstrap min css -->
     <link rel="stylesheet" href="assets/css/vendor/fontawesome.css">
     <link rel="stylesheet" href="assets/css/plugins/swiper.css">
