--- a/project-details.html
+++ b/project-details.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Reeni is a modern personal portfolio template for designers, developers, content writer, cleaner, programmer, fashion designer, model, Influencer and freelancers. Fully responsive, SEO-friendly, Bootstrap and easy to customize.">
     <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.svg">
-    <title>Project Details Asllicecode - Personal Portfolio HTML Template | Freelancer & Developer Portfolio</title>
+    <title>Shubham Shrotriya | Software Developer - Portfolio</title>
     <!-- Bootstrap min css -->
     <link rel="stylesheet" href="assets/css/vendor/fontawesome.css">
     <link rel="stylesheet" href="assets/css/plugins/swiper.css">
@@ -74,14 +74,7 @@
                                     <a href="https://github.com/shubhamshrotriya16427"><i class="fa-brands fa-github"></i></a>
                                 </div>
                             </div>
-                            <div class="actions-area">
-                                <div class="tmp-side-collups-area d-none d-xl-block">
-                                    <button class="tmp-menu-bars tmp_button_active"><i class="fa-regular fa-bars-staggered"></i></button>
-                                </div>
-                                <div class="tmp-side-collups-area d-block d-xl-none">
-                                    <button class="tmp-menu-bars humberger_menu_active"><i class="fa-regular fa-bars-staggered"></i></button>
-                                </div>
-                            </div>
+                            
                         </div>
                     </div>
                 </div>
@@ -92,95 +85,7 @@
 
   
 
-    <div class="d-block d-xl-none">
-        <div class="tmp-popup-mobile-menu">
-            <div class="inner">
-                <div class="header-top">
-                    <div class="logo">
-                        <a href="index.html" class="logo-area">
-                            <img class="logo-dark" src="assets/images/logo/white-logo-reeni.png" alt="Reeni - Personal Portfolio HTML Template for developers and freelancers">
-                            <img class="logo-white" src="assets/images/logo/logo-white.png" alt="Reeni - Personal Portfolio HTML Template for developers and freelancers">
-                        </a>
-
-                    </div>
-                    <div class="close-menu">
-                        <button class="close-button tmp-round-action-btn">
-                            <i class="fa-sharp fa-light fa-xmark"></i>
-                        </button>
-                    </div>
-                </div>
-                <ul class="tmp-mainmenu">
-                    <li>
-                        <a href="#">Home
-                        </a>
-                        <!-- <ul class="submenu">
-            <li><a href="index.html">Home 01</a></li>
-            <li><a href="index-02.html">Home 02</a></li>
-            <li><a href="index-03.html">Home 03</a></li>
-            <li><a href="index-04.html">Home 04</a></li>
-            <li><a href="index-05.html">Home 05</a></li>
-            <li><a href="index-06.html">Home 06</a></li>
-            <li><a href="index-07.html">Home 07</a></li>
-            <li><a href="index-08.html">Home 08</a></li>
-            <li><a href="index-09.html">Home 09</a></li>
-            <li><a href="index-10.html">Home 10</a></li>
-            <li><a href="index-11.html">Home 11</a></li>
-            <li><a href="index-12.html">Home 12</a></li>
-            <li><a href="index-13.html">Home 13</a></li>
-        </ul> -->
-                    </li>
-                    <li>
-                        <a href="about.html">About</a>
-                    </li>
-                    <li class="has-dropdown">
-                        <a href="#">Services
-                            <i class="fa-regular fa-chevron-down"></i>
-                        </a>
-                        <ul class="submenu">
-                            <li><a href="service.html">Service</a></li>
-                            <li><a href="service-details.html">Service Details</a></li>
-                        </ul>
-                    </li>
-                    <li class="has-dropdown">
-                        <a href="#">Blog
-                            <i class="fa-regular fa-chevron-down"></i>
-                        </a>
-                        <ul class="submenu">
-                            <li><a href="blog.html">Blog Classic</a></li>
-                            <li><a href="blog-details.html">Blog Details</a></li>
-                        </ul>
-                    </li>
-                    <li class="has-dropdown">
-                        <a href="#">Project
-                            <i class="fa-regular fa-chevron-down"></i>
-                        </a>
-                        <ul class="submenu">
-                            <li><a href="project.html">Project</a></li>
-                            <li><a href="project-details.html">Project Details</a></li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="contact.html">Contact</a>
-                    </li>
-                </ul>
-
-
-                <div class="social-wrapper mt--40">
-                    <span class="subtitle">find with me</span>
-                    <div class="social-link">
-                        <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                        <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
-                        <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                        <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-                    </div>
-                </div>
-                <!-- social area end -->
-
-
-
-            </div>
-        </div>
-    </div>
+ 
 
     <!-- Breadcrumb Area Start -->
     <div class="breadcrumb-area breadcrumb-bg">
