--- a/project-details2.html
+++ b/project-details2.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Reeni is a modern personal portfolio template for designers, developers, content writer, cleaner, programmer, fashion designer, model, Influencer and freelancers. Fully responsive, SEO-friendly, Bootstrap and easy to customize.">
     <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.svg">
-    <title>Project Details Asllicecode - Personal Portfolio HTML Template | Freelancer & Developer Portfolio</title>
+    <title>Shubham Shrotriya | Software Developer - Portfolio</title>
     <!-- Bootstrap min css -->
     <link rel="stylesheet" href="assets/css/vendor/fontawesome.css">
     <link rel="stylesheet" href="assets/css/plugins/swiper.css">
@@ -73,14 +73,7 @@
                                     <a href="https://github.com/shubhamshrotriya16427"><i class="fa-brands fa-github"></i></a>
                                 </div>
                             </div>
-                            <div class="actions-area">
-                                <div class="tmp-side-collups-area d-none d-xl-block">
-                                    <button class="tmp-menu-bars tmp_button_active"><i class="fa-regular fa-bars-staggered"></i></button>
-                                </div>
-                                <div class="tmp-side-collups-area d-block d-xl-none">
-                                    <button class="tmp-menu-bars humberger_menu_active"><i class="fa-regular fa-bars-staggered"></i></button>
-                                </div>
-                            </div>
+                           
                         </div>
                     </div>
                 </div>
