--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
         </ul> -->
                                 </li>
                                 <li>
-                                    <a href="about.html">About</a>
+                                    <a href="about.html">About Me</a>
                                 </li>
 
 
@@ -96,7 +96,7 @@
 
                                 </li>
                                 <li>
-                                    <a href="contact.html">Contact</a>
+                                    <a href="contact.html">Contact Me</a>
                                 </li>
                             </ul>
 
@@ -123,11 +123,11 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="breadcrumb-inner text-center">
-                        <h1 class="title split-collab">About</h1>
+                        <h1 class="title split-collab">About Me</h1>
                         <ul class="page-list">
                             <li class="tmp-breadcrumb-item"><a href="index.html">Home</a></li>
                             <li class="icon"><i class="fa-solid fa-angle-right"></i></li>
-                            <li class="tmp-breadcrumb-item active">About</li>
+                            <li class="tmp-breadcrumb-item active">About Me</li>
                         </ul>
                     </div>
                 </div>
@@ -606,14 +606,14 @@
                                 <a href="project.html">Projects</a>
                             </li>
                             <li>
-                                <a href="contact.html">Contact Us</a>
+                                <a href="contact.html">Contact Me</a>
                             </li>
                         </ul>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <div class="single-footer-wrapper contact-wrap">
-                        <h5 class="ft-title">Contact </h5>
+                        <h5 class="ft-title">Contact Me </h5>
                         <ul class="ft-link tmp-link-animation">
                             <li><span class="ft-icon"><i class="fa-solid fa-envelope"></i></span><a href="#">shubhamshrotriya31@gmail.com</a></li>
                             <li><span class="ft-icon"><i class="fa-solid fa-location-dot"></i></span>Los Angeles, CA</li>
@@ -644,7 +644,7 @@
                     <ul>
                         <li><a href="#">Terms & Condition</a></li>
                         <li><a href="#">Privacy Policy</a></li>
-                        <li><a href="#">Contact Us</a></li>
+                        <li><a href="#">Contact Me</a></li>
                     </ul>
                 </div>
             </div>
