--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </ul> -->
                                 </li>
                                 <li>
-                                    <a href="about.html">About</a>
+                                    <a href="about.html">About Me</a>
                                 </li>
 
 
@@ -106,7 +106,7 @@
 
                                 </li>
                                 <li>
-                                    <a href="contact.html">Contact</a>
+                                    <a href="contact.html">Contact Me</a>
                                 </li>
                             </ul>
 
@@ -219,14 +219,14 @@
                         </a>
                     </li>
                     <li>
-                        <a href="about.html">About</a>
+                        <a href="about.html">About Me</a>
                     </li>
 
                     <li>
                         <a href="project.html">Project</a>
                     </li>
                     <li>
-                        <a href="contact.html">Contact</a>
+                        <a href="contact.html">Contact Me</a>
                     </li>
                 </ul>
 
@@ -293,7 +293,7 @@
 
                                 <a class="tmp-btn hover-icon-reverse radius-round" href="about.html">
                                     <span class="icon-reverse-wrapper">
-                                        <span class="btn-text">More About Us</span>
+                                        <span class="btn-text">More About Me</span>
                                         <span class="btn-icon"><i class="fa-sharp fa-regular fa-arrow-right"></i></span>
                                         <span class="btn-icon"><i class="fa-sharp fa-regular fa-arrow-right"></i></span>
                                     </span>
@@ -692,14 +692,14 @@
                                 <a href="project.html">Projects</a>
                             </li>
                             <li>
-                                <a href="contact.html">Contact Us</a>
+                                <a href="contact.html">Contact Me</a>
                             </li>
                         </ul>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <div class="single-footer-wrapper contact-wrap">
-                        <h5 class="ft-title">Contact </h5>
+                        <h5 class="ft-title">Contact Me </h5>
                         <ul class="ft-link tmp-link-animation">
                             <li><span class="ft-icon"><i class="fa-solid fa-envelope"></i></span><a href="#">shubhamshrotriya31@gmail.com</a></li>
                             <li><span class="ft-icon"><i class="fa-solid fa-location-dot"></i></span>Los Angeles, CA</li>
@@ -730,7 +730,7 @@
                     <ul>
                         <li><a href="#">Terms & Condition</a></li>
                         <li><a href="#">Privacy Policy</a></li>
-                        <li><a href="#">Contact Us</a></li>
+                        <li><a href="#">Contact Me</a></li>
                     </ul>
                 </div>
             </div>
