--- a/project.html
+++ b/project.html
@@ -50,7 +50,7 @@
         </ul> -->
                                 </li>
                                 <li>
-                                    <a href="about.html">About</a>
+                                    <a href="about.html">About Me</a>
                                 </li>
 
 
@@ -90,7 +90,7 @@
 
                                 </li>
                                 <li>
-                                    <a href="contact.html">Contact</a>
+                                    <a href="contact.html">Contact Me</a>
                                 </li>
                             </ul>
 
@@ -220,7 +220,7 @@
         </ul> -->
                     </li>
                     <li>
-                        <a href="about.html">About</a>
+                        <a href="about.html">About Me</a>
                     </li>
                     <li class="has-dropdown">
                         <a href="#">Services
@@ -250,7 +250,7 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="contact.html">Contact</a>
+                        <a href="contact.html">Contact Me</a>
                     </li>
                 </ul>
 
@@ -398,14 +398,14 @@
                                     <a href="project.html">Projects</a>
                                 </li>
                                 <li>
-                                    <a href="contact.html">Contact Us</a>
+                                    <a href="contact.html">Contact Me</a>
                                 </li>
                             </ul>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6">
                         <div class="single-footer-wrapper contact-wrap">
-                            <h5 class="ft-title">Contact </h5>
+                            <h5 class="ft-title">Contact Me </h5>
                             <ul class="ft-link tmp-link-animation">
                                 <li><span class="ft-icon"><i class="fa-solid fa-envelope"></i></span><a href="#">shubhamshrotriya31@gmail.com</a></li>
                                 <li><span class="ft-icon"><i class="fa-solid fa-location-dot"></i></span>Los Angeles, CA</li>
@@ -436,7 +436,7 @@
                         <ul>
                             <li><a href="#">Terms & Condition</a></li>
                             <li><a href="#">Privacy Policy</a></li>
-                            <li><a href="#">Contact Us</a></li>
+                            <li><a href="#">Contact Me</a></li>
                         </ul>
                     </div>
                 </div>
