--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                     </div>
                     <!-- social area start -->
                     <div class="social-wrapper mt--20">
-                        <span class="subtitle">find with me</span>
+                        <span class="subtitle">Find me on</span>
                         <div class="social-link">
 
                             <a href="https://www.linkedin.com/in/shubhamshrotriya/"><i class="fa-brands fa-linkedin-in"></i></a>
@@ -232,7 +232,7 @@
 
 
                 <div class="social-wrapper mt--40">
-                    <span class="subtitle">find with me</span>
+                    <span class="subtitle">Find me on</span>
                     <div class="social-link">
 
                         <a href="https://www.linkedin.com/in/shubhamshrotriya/"><i class="fa-brands fa-linkedin-in"></i></a>
