--- a/contact.html
+++ b/contact.html
@@ -168,7 +168,7 @@
                     </div>
                     <!-- social area start -->
                     <div class="social-wrapper mt--20">
-                        <span class="subtitle">find with me</span>
+                        <span class="subtitle">Find me</span>
                         <div class="social-link">
                             <a href="#"><i class="fa-brands fa-instagram"></i></a>
                             <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
@@ -257,7 +257,7 @@
 
 
                 <div class="social-wrapper mt--40">
-                    <span class="subtitle">find with me</span>
+                    <span class="subtitle">Find me</span>
                     <div class="social-link">
                         <a href="#"><i class="fa-brands fa-instagram"></i></a>
                         <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
