--- a/project.html
+++ b/project.html
@@ -169,7 +169,7 @@
                     </div>
                     <!-- social area start -->
                     <div class="social-wrapper mt--20">
-                        <span class="subtitle">find with me</span>
+                        <span class="subtitle">Find me</span>
                         <div class="social-link">
                             <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
                             <a href="#"><i class="fa-brands fa-github"></i></a>
