--- a/index.html
+++ b/index.html
@@ -493,11 +493,11 @@
                             <p>
                             <ul class="data-list">
                                 <li>Designed and developed scalable enterprise applications using Java,
-                                    Spring Boot, and Angular, enabling seamless integration of financial
+                                    Spring Boot, Flask, and Angular, enabling seamless integration of financial
                                     data processing and enhancing system performance for high-
                                     availability services.</li>
 
-                                <li>Built and deployed RESTful APIs to facilitate communication between
+                                <li>Built and deployed RESTful APIs and Kafka streaming pipelines to facilitate communication between
                                     distributed systems, optimizing data exchange and reducing API
                                     response time by 30% to support millions of daily transactions.</li>
 
