--- a/index.html
+++ b/index.html
@@ -651,13 +651,13 @@
         <h1>TECHNICAL SKILLS</h1>
         <ul>
 
-            <li> <span class="text-deco">Programming Languages & Frameworks:</span> C++, Java, Python, JavaScript,
-                React, Node.Js, Spring Boot,
+            <li> <span class="text-deco">Programming Languages & Frameworks:</span> Python, C++, Java, JavaScript,
+                React, Node.Js, Flask, Spring Boot,
                 Express.Js, Angular.Js, Django</li>
             <li> <span class="text-deco">Database Management:</span> SQL, MongoDB, PostgreSQL, MySQL <br></li>
             <li> <span class="text-deco">Cloud Platforms & DevOps:</span> AWS, Azure, Docker, Kubernetes<br></li>
             <li> <span class="text-deco"> Frontend & UI/UX Development:</span> HTML5, CSS3, Bootstrap,Tailwind<br></li>
-            <li> <span class="text-deco"> Development & Integration:</span> RESTful APIs, GraphQL<br></li>
+            <li> <span class="text-deco"> Development & Integration:</span> RESTful APIs, GraphQL, Kafka<br></li>
             <li> <span class="text-deco">Version Control Systems:</span> Git, GitHub, GitLab<br></li>
             <li> <span class="text-deco">Software Testing & Debugging:</span> JUnit, Jest, Mocha<br></li>
             <li> <span class="text-deco">Agile & Project Management:</span> JIRA, Trello, Scrum, Kanban Performance
