Update experience counter from 5 to 7

--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
                 <div class="col-lg-6">
                     <div class="about-us-left-content-wrap bg-vactor-one">
                         <div class="years-of-experience-card tmp-scroll-trigger tmp-fade-in animation-order-1">
-                            <h2 class="counter card-title"><span class="odometer" data-count="5">0</span>+
+                            <h2 class="counter card-title"><span class="odometer" data-count="7">0</span>
                             </h2>
                             <p class="card-para">years of experience</p>
                         </div>
